--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ p{
 
 .left a{
     background-color: black;
-    color: #d9d3d3;
+    color: white;
     text-decoration: none;
     padding: 18px 20px;
     margin-left: 60px;
@@ -109,12 +109,18 @@ p{
 }
 
 .navbar a:hover{
-    font-size: 19px;
-    color: #258a01;
+    font-size: 18px;
+    color: white;
 }
 
 .call-now{
     background-color: black;
     padding: 7px 20px;
     color: white !important;
+}
+
+.call-now:hover{
+    background-color: transparent;
+    border: solid 1px black;
+    color: black !important;
 }
